tests/paczka1/fuzzy1/72898313.err
Error in line 1: S167 A192 90,6
Error in line 7: GueKex S378 22,4
Error in line 9: GueKex S467 17,8
Error in line 16: qtNGiW S378 54,8
Error in line 14: r4g S467 57,0
